--- a/Interstate Analysis.ipynb
+++ b/Interstate Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89ec00f3",
+   "id": "28b86b19",
    "metadata": {},
    "source": [
     "# Indicators of Heavy Traffic on I-94\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1666e025",
+   "id": "a86aaff9",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0ec0a1c9",
+   "id": "784992d1",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f6df1a99",
+   "id": "e6e9ddb4",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6bee065",
+   "id": "9f08c653",
    "metadata": {},
    "source": [
     "The dataset has 48,204 rows and 9 columns, and there are no null values. Each row describes traffic and weather data for a specific hour — we have data from 2012-10-02 09:00:00 until 2018-09-30 23:00:00.\n",
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "63bff57b",
+   "id": "69e98ef7",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bd926271",
+   "id": "05145272",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a87da51",
+   "id": "b10e5a5e",
    "metadata": {},
    "source": [
     "Between 2012-10-02 09:00:00 and 2018-09-30 23:00:00, the hourly traffic volume varied from 0 to 7,280 cars, with an average of 3,260 cars.\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "568632a1",
+   "id": "74af7c99",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae9b1fa",
+   "id": "55f55413",
    "metadata": {},
    "source": [
     "This significant difference in row numbers between day and night is due to a few hours of missing data. For instance, if you look at rows 176 and 177 `(interstate.iloc[176:178])`, you'll notice there's no data for two hours (4 and 5).\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "62cffdab",
+   "id": "b88543ad",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1b63c7ea",
+   "id": "a1ec9936",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2961ec26",
+   "id": "87b50140",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b498b02",
+   "id": "23c2d3cb",
    "metadata": {},
    "source": [
     "The histogram that shows the distribution of traffic volume during the day is left skewed. This means that most of the traffic volume values are high — there are 4,252 or more cars passing the station each hour 75% of the time (because 25% of values are less than 4,252).\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "887d829a",
+   "id": "62f83cb2",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981054f7",
+   "id": "d715dc1b",
    "metadata": {},
    "source": [
     "The traffic looks less heavy during cold months (November–February) and more intense during warm months (March–October), with one interesting exception: July. Is there anything special about July? Is traffic significantly less heavy in July each year?\n",
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2611a223",
+   "id": "fa175eb2",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ac3260",
+   "id": "5ca3d18c",
    "metadata": {},
    "source": [
     "Typically, the traffic is pretty heavy in July, similar to the other warm months. The only exception we see is 2016, which had a high decrease in traffic volume. One possible reason for this is road construction — this article from 2016 supports this hypothesis.\n",
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9935147f",
+   "id": "2aa313b6",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d3dd280",
+   "id": "480d8c89",
    "metadata": {},
    "source": [
     "Traffic volume is significantly heavier on business days (Monday – Friday). Except for Monday, we only see values over 5,000 during business days. Traffic is lighter on weekends, with values below 4,000 cars.\n",
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f4eba55f",
+   "id": "40990d98",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93b1a1be",
+   "id": "1bbf1343",
    "metadata": {},
    "source": [
     "At each hour of the day, the traffic volume is generally higher during business days compared to the weekends. As somehow expected, the rush hours are around 7 and 16 — when most people travel from home to work and back. We see volumes of over 6,000 cars at rush hours.\n",
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "623917b4",
+   "id": "3f08851f",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c14f0d67",
+   "id": "65acec2d",
    "metadata": {},
    "source": [
     "Temperature shows the strongest correlation with a value of just +0.13. The other relevant columns (rain_1h, snow_1h, clouds_all) don't show any strong correlation with traffic_value.\n",
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6c435ee2",
+   "id": "0024198e",
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0754c6b",
+   "id": "e84216cf",
    "metadata": {},
    "source": [
     "We can conclude that temperature doesn't look like a solid indicator of heavy traffic.\n",
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dc9feca3",
+   "id": "784a0bbe",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e8a7d81",
+   "id": "b2302641",
    "metadata": {},
    "source": [
     "It looks like there's no weather type where traffic volume exceeds 5,000 cars. This makes finding a heavy traffic indicator more difficult. Let's also group by weather_description, which has a more granular weather classification."
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "648f8696",
+   "id": "f8fc9a9d",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3584dcff",
+   "id": "25aaec5a",
    "metadata": {},
    "source": [
     "It looks like there are three weather types where traffic volume exceeds 5,000:\n",
@@ -859,21 +859,13 @@
     "\n",
     "- Time indicators\n",
     "  - The traffic is usually heavier during warm months (March–October) compared to cold months (November–February).\n",
-    "    The traffic is usually heavier on business days compared to the weekends.\n",
-    "    On business days, the rush hours are around 7 and 16.\n",
+    "  - The traffic is usually heavier on business days compared to the weekends.\n",
+    "  - On business days, the rush hours are around 7 and 16.\n",
     "- Weather indicators\n",
     "  - Shower snow\n",
-    "  Light rain and snow\n",
-    "  Proximity thunderstorm with drizzle"
+    "  - Light rain and snow\n",
+    "  - Proximity thunderstorm with drizzle"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e05b7bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
